--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.jar=${dist.dir}/JDBC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.derby.jar=C:\\Users\\FACULDADE\\Desktop\\Nova pasta\\CursoJavaSatc\\Contatos\\derby.jar
+file.reference.derby.jar=C:\\Users\\FACULDADE\\Desktop\\Nova pasta\\JDBC\\Contatos\\derby.jar
 includes=**
 jar.compress=false
 javac.classpath=\
